# PG6200-Assignment-3

./: .gitignore  CMakeLists.txt  GL32SDL.vcxproj  GL32SDL.vcxproj.filters  GameManager.cpp  GameManager.h  Model.h  README.md  ShadowFBO.cpp  Timer.h  VirtualTrackball.cpp  VirtualTrackball.h
GLUtils/: BO.h  Program.h
include/: GameManager.h
include/GLUtils/: GLUtils.hpp
shaders/: fbo.frag  fbo.vert  hiddenline.frag  hiddenline.geom  hiddenline.vert  phong.frag  phong.geom  phong.vert  shadow.frag  shadow.vert  wireframe.geom
src/: CMakeLists.txt  GameException.h  GameManager.cpp  GameManager.h  Model.cpp  Model.h  ShadowFBO.cpp  ShadowFBO.h  Timer.h  VirtualTrackball.cpp  VirtualTrackball.h  main.cpp
src/GLUtils/: CubeMap.h  GLUtils.h  Program.h
src/shaders/: hiddenline.geom  phong.vert  wireframe.frag  wireframe.vert
